fix(ui): fix z-index for panel resizer

--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -142,3 +142,7 @@ tui-dropdown-box {
   box-shadow: 0 1px 2px rgb(19 20 22 / 10%);
   background-color: rgba(255, 255, 255, 0.7);
 }
+
+.as-split-gutter {
+  z-index: 1000;
+}
